--- a/package.json
+++ b/package.json
@@ -34,5 +34,23 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Menu for the rave bar at SkullSpace",
+  "main": "",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skullspace/skullmenu.git"
+  },
+  "keywords": [
+    "skullspace",
+    "bar",
+    "menu"
+  ],
+  "author": "Zorian Medwid <misterhat144@gmail.com>",
+  "license": "AGPL-3.0+",
+  "bugs": {
+    "url": "https://github.com/skullspace/skullmenu/issues"
+  },
+  "homepage": "https://github.com/skullspace/skullmenu#readme"
 }
