--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "appwrite": "^17.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
@@ -37,7 +38,6 @@
   },
   "description": "Menu for the social bar at SkullSpace",
   "main": "",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/skullspace/skullmenu.git"
